# smit-test

./: .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
smit_test/: app.py  models.py  settings.py
smit_test/api/: router.py  schemas.py
smit_test/api/cargo_types/: __init__.py  models.py  router.py  schemas.py
smit_test/api/tariffs/: __init__.py  models.py  router.py  schemas.py
smit_test/api/tariffs/compute/: router.py  schemas.py
smit_test/migrations/models/: 0_20230719011931_init.py
